Fixed image align didn't work on responsive

--- a/styles/global.css
+++ b/styles/global.css
@@ -351,9 +351,9 @@ h2, h3 { page-break-after: avoid; }
     width: auto;
     float: none;
 }
-.uf-responsive .upfront-image-caption-container {
+/*.uf-responsive .upfront-image-caption-container {
     width: 100%;
-}
+}*/
 
 /* Flexbox experiments *//* */
 .flexbox-support .upfront-output-region,
